# book_deep_learning_reuse_for_science

./: Makefile  pyproject.toml
.github/workflows/: build.yml
dl4s_book/: conf.py
dlr4s_book/: chapter_1.rst  chapter_2.rst  chapter_3.rst  chapter_4.rst  chapter_5.rst  chapter_6.rst  chapter_7.rst  chapter_8.rst  chapter_9.rst  conf.py  index.rst
