[project]
name = "dl4s_book"
version = "0.0.1"
description = "Deep Learning Reuse For Science"
authors = [{ name = "Nicholas M. Synovic", email = "nicholas.synovic@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
keywords = ["Deep Learning", "Deep Learning Reuse", "Software Engineering", "Science"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
]

[project.urls]
Homepage = "https://github.com/NicholasSynovic/book_deep_learning_reuse_for_science"
Repository = "https://github.com/NicholasSynovic/book_deep_learning_reuse_for_science"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
